--- a/assets/page.css
+++ b/assets/page.css
@@ -124,7 +124,7 @@ div#Organization_div{
 div#button_div{
 	position:relative;
 	left:575px;
-	bottom:-130px;
+	bottom:-150px;
 }
 div#Username_error{
 	position:relative;
@@ -150,10 +150,10 @@ div#Repassword_error{
 
 div#account_result{
 	position:relative;
-	left:440px;
+	left:270px;
 	bottom:-80px;
+	width: 50%;
 	float: left;
-	height: 40px;
 	text-align: center;
 	font-size: 13px;
 	font-weight: 200;
@@ -217,4 +217,155 @@ button{
 	left:-50px;
 	margin: 5px;
 }
+
+/*body{
+	background: #FFE4C4;
+}
+
+H1{
+	text-align:center;
+}
+div#account_result{
+	position:relative;
+	left:650px;
+	bottom:-135px;
+	float: left;
+	width: 20%;
+	height: 40px;
+	display:inline-block;
+    margin: 2px;
+	text-align: center;
+	font-size: 14px;
+	font-weight: 200;
+	color: red;
+	line-height: 20px
+}
+div#Password_error{
+	position:relative;
+	left:850px;
+	bottom:-55px;
+	color:red;
+	font-size: 12px;
+}
+div#Repassword_error{
+	position:relative;
+	left:850px;
+	bottom:-85px;
+	color:red;
+	font-size: 12px;
+}
+div#Username_error{
+	position:relative;
+	left:850px;
+	bottom:-30px;
+	color:red;
+	font-size: 12px;
+}
+button{
+	position:relative;
+	left:160px;
+	bottom:-230px;
+	float: right;
+	width: 100px;
+	height: 40px;
+	margin: 2px;
+	display:inline-block;
+	background:white
+}
+label{
+	float: left;
+	width: 20%;
+	height: 40px;
+	display:inline-block;
+    margin: 2px;
+	font-size: 18px;
+	font-weight: 300;
+	color: black;
+	line-height: 20px
+	}
+
+label#Username_label::before{
+	content:*;
+	color:red;
+}
+
+label#Password_label::before{
+	content:*;
+	color:red;
+}
+
+label#Repassword_label::before{
+	content:*;
+	color:red;
+}
+
+label#Email_label::before{
+	content:*;
+	color:red;
+}
+
+label#District_label::before{
+	content:*;
+	color:red;
+}
+
+label#Country_label::before{
+	content:*;
+	color:red;
+}
+
+label#Province_label::before{
+	content:*;
+	color:red;
+}
+
+label#City_label::before{
+	content:*;
+	color:red;
+}
+
+label#Organization_label::before{
+	content:*;
+	color:red;
+}
+
+label#District_label{
+	position:relative;
+	left:360px;
+	bottom: -250px;
+}
+form{
+	position:relative;
+	left:60px;
+	float: right;
+	width: 60%;
+	height: 40px;
+	display:inline-block;
+	margin: 10px
+}
+form#city_div{
+	position:relative;
+	left:-50px;
+	bottom:-80px;
+	width: 165px;
+	display: inline-block;
+	margin: 30px
+}
+.dropdown{
+	position:relative;
+	left:535px;
+	bottom:-280px;
+	width: 165px;
+	display: inline-block;
+	margin: 30px
+}
+div#button_div{
+	position:relative;
+	left:-50px;
+	bottom:-80px;
+	width: 165px;
+	margin: 30px
+}
+
+*/
 
