update page layout with boostrap.css
update page layout with boostrap.css

--- a/assets/page.css
+++ b/assets/page.css
@@ -1,371 +1,39 @@
-body  {
+body {
      font-family: Verdana; sans-serif;
-     background: #FFEFD5;
+     background: #FFEFD5 no-repeat;
+     background-size:cover;
+    /* font-size: 13px;*/
      }
-H1{
-	text-align:center;
-	position:relative;
-	left: -110px;
-	font-size: 30px;
-}
-div#father_div{
+/*form#father_div{
 	position:relative;
 	left: 110px;
+	background:white;
+	padding-right:200px;
+	padding-right-color:#FFEFD5;
 
-}
-button#sign_in_button{
-	position:relative;
-	left: 610px;
-}
-label#Username_label{
-	position:relative;
-	left: -110px;
-	bottom:-20px;
-	font-size: 14px;
-}
-label#Password_label{
-	position:relative;
-	left: -110px;
-	bottom:-20px;
-	font-size: 14px;
-}
-label#Repassword_label{
-	position:relative;
-	left: -110px;
-	bottom:-20px;
-	font-size: 14px;
-}
-label#realname_label{
-	position:relative;
-	left: -100px;
-	bottom:-20px;
-	font-size: 14px;
-}
-label#Email_label{
-	position:relative;
-	left: -110px;
-	bottom:-20px;
-	font-size: 14px;
-}
-label#phone_label{
-	position:relative;
-	left: -100px;
-	bottom:-20px;
-	font-size: 14px;
-}
-label#Organization_label{
-	position:relative;
-	left: -110px;
-	bottom:-20px;
-	font-size: 14px;
-}
-label#District_label{
-	position:relative;
-	left:495px;
-	bottom:-290px;
-	font-size: 14px;
-}
-label#Country_label{
-	position:relative;
-	left:275px;
-	bottom:-250px;
-	font-size: 14px;
-}
-label#Province_label{
-	position:relative;
-	left:275px;
-	bottom:-210px;
-	font-size: 14px;
-}
-label#City_label{
-	position:relative;
-	left:275px;
-	bottom:-170px;
-	font-size: 14px;
-}
-div#District_div{
-	position:relative;
-	left:575px;
-	bottom:-240px;
-	width: 165px;
-	display: inline-block;
-	margin: 30px
-}
-div#country_div{
-	position:relative;
-	left:575px;
-	bottom:-200px;
-	width: 165px;
-	display: inline-block;
-	margin: 30px
-}
-div#province_div{
-	position:relative;
-	left:575px;
-	bottom:-160px;
-	width: 165px;
-	display: inline-block;
-	margin: 30px
-}
-div#city_div{
-	position:relative;
-	left:575px;
-	bottom:-130px;
-	width: 165px;
-	display: inline-block;
-	margin: 30px
-}
-div#Organization_div{
-	position:relative;
-	left:605px;
-	bottom:-100px;
-	width: 165px;
-}
-div#button_div{
-	position:relative;
-	left:575px;
-	bottom:-150px;
-}
-div#Username_error{
-	position:relative;
-	left:180px;
-	bottom:20px;
-	color:red;
-	font-size: 12px;
-}
-div#Password_error{
-	position:relative;
-	left:180px;
-	bottom:20px;
-	color:red;
-	font-size: 12px;
-}
-div#Repassword_error{
-	position:relative;
-	left:180px;
-	bottom:20px;
-	color:red;
-	font-size: 12px;
-}
-
-div#account_result{
-	position:relative;
-	left:270px;
-	bottom:-80px;
-	width: 50%;
-	float: left;
-	text-align: center;
-	font-size: 13px;
-	font-weight: 200;
-	color: red;
-	line-height: 20px
-}
-form{
-	float: right;
-	width: 60%;
-	height: 40px;
-	digplay:inline-block;
-	margin: 2px;
-}
-label#Username_label::before{
-	content:'*';
-	color:red;
-}
-
-label#Password_label::before{
-	content:'*';
-	color:red;
-}
-
-label#Repassword_label::before{
-	content:'*';
-	color:red;
-}
-
-label#Email_label::before{
-	content:'*';
-	color:red;
-}
-
-label#District_label::before{
-	content:'*';
-	color:red;
-}
-
-label#Country_label::before{
-	content:'*';
-	color:red;
-}
-
-label#Province_label::before{
-	content:'*';
-	color:red;
-}
-
-label#City_label::before{
-	content:'*';
-	color:red;
-}
-
-label#Organization_label::before{
-	content:'*';
-	color:red;
-}
-
-button{
-	position:relative;
-	left:-50px;
-	margin: 5px;
-}
-
-/*body{
-	background: #FFE4C4;
-}
-
-H1{
-	text-align:center;
-}
-div#account_result{
-	position:relative;
-	left:650px;
-	bottom:-135px;
-	float: left;
-	width: 20%;
-	height: 40px;
-	display:inline-block;
-    margin: 2px;
-	text-align: center;
-	font-size: 14px;
-	font-weight: 200;
-	color: red;
-	line-height: 20px
-}
-div#Password_error{
-	position:relative;
-	left:850px;
-	bottom:-55px;
-	color:red;
-	font-size: 12px;
-}
-div#Repassword_error{
-	position:relative;
-	left:850px;
-	bottom:-85px;
-	color:red;
-	font-size: 12px;
-}
-div#Username_error{
-	position:relative;
-	left:850px;
-	bottom:-30px;
-	color:red;
-	font-size: 12px;
-}
-button{
-	position:relative;
-	left:160px;
-	bottom:-230px;
-	float: right;
-	width: 100px;
-	height: 40px;
-	margin: 2px;
-	display:inline-block;
-	background:white
-}
-label{
-	float: left;
-	width: 20%;
-	height: 40px;
-	display:inline-block;
-    margin: 2px;
-	font-size: 18px;
-	font-weight: 300;
-	color: black;
-	line-height: 20px
+}*/
+.form_bg{
+	background: rgba(255,255,255,0.2);
+	width:800px;
+	margin:100px auto;
 	}
 
-label#Username_label::before{
-	content:*;
+.label_font_size{
+	font-size:13px;
+}
+
+.dropdown_font_size{
+	font-size:13px;
+	font-family: Verdana; sans-serif;
+}
+
+.label_before::before {
+   content:"*";
+   color: red;
+}
+
+.fill_request{
+	font-size: 10px;
+	margin-right: 15px;
 	color:red;
 }
-
-label#Password_label::before{
-	content:*;
-	color:red;
-}
-
-label#Repassword_label::before{
-	content:*;
-	color:red;
-}
-
-label#Email_label::before{
-	content:*;
-	color:red;
-}
-
-label#District_label::before{
-	content:*;
-	color:red;
-}
-
-label#Country_label::before{
-	content:*;
-	color:red;
-}
-
-label#Province_label::before{
-	content:*;
-	color:red;
-}
-
-label#City_label::before{
-	content:*;
-	color:red;
-}
-
-label#Organization_label::before{
-	content:*;
-	color:red;
-}
-
-label#District_label{
-	position:relative;
-	left:360px;
-	bottom: -250px;
-}
-form{
-	position:relative;
-	left:60px;
-	float: right;
-	width: 60%;
-	height: 40px;
-	display:inline-block;
-	margin: 10px
-}
-form#city_div{
-	position:relative;
-	left:-50px;
-	bottom:-80px;
-	width: 165px;
-	display: inline-block;
-	margin: 30px
-}
-.dropdown{
-	position:relative;
-	left:535px;
-	bottom:-280px;
-	width: 165px;
-	display: inline-block;
-	margin: 30px
-}
-div#button_div{
-	position:relative;
-	left:-50px;
-	bottom:-80px;
-	width: 165px;
-	margin: 30px
-}
-
-*/
-
