--- a/assets/common.css
+++ b/assets/common.css
@@ -71,6 +71,20 @@
 	box-shadow: 2px 2px 2px lightgrey;
 }
 
+.card-lg{
+	margin-top: 20px;
+	height: 550px;
+	margin-left: 0px;
+	padding: 0px;
+	box-shadow: 2px 2px 2px lightgrey;
+}
+
+.card-tabs{
+	margin: 15px;
+	padding: 20px;
+	
+}
+
 .badge-style{
 	margin: 0px;
 	padding: 0px;
@@ -100,7 +114,7 @@ h4.card-title{
 }
 p.text-P{
 	font-family: DIN Next LT Pro;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
@@ -111,7 +125,7 @@ p.text-P{
 }
 h4.text-P{
 	font-family: DIN Next LT Pro;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
@@ -122,7 +136,7 @@ h4.text-P{
 }
 p.text-td{
 	font-family: DIN Next LT Pro;
-    font-size: 1.5rem;
+    font-size: 1.0rem;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
@@ -136,6 +150,10 @@ p.text-td{
 .card-body{
 	padding: 20px 0px;
 	border: none;
+}
+
+.card-fig{
+	margin:15px;
 }
 
 .text-green{
@@ -165,7 +183,7 @@ p.text-td{
 
 .text-sm{
 	font-family: DIN Next LT Pro;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
@@ -192,12 +210,14 @@ table.gridtable{
 table.gridtable th {
 	text-align:left;
 	border-top: 1px;
-	height:82.3px;
+	font-size: 0.85rem;
+	height:94.7px;
 	vertical-align:middle!important;
 
 }
 table.gridtable td {
-    height:82.3px;
+    height:94.7px;
+    font-size: 0.95rem;
     vertical-align:middle!important;
 	text-align: center;
 	padding: 15px;
