--- a/assets/common.css
+++ b/assets/common.css
@@ -29,6 +29,9 @@ li.active {
     transition-duration: .2s;
     height: 100%;
 }
+.maginRight{
+	margin-right: 90px!important;
+}
 .brand {
     height: 70px;
     line-height: 70px;
@@ -104,7 +107,70 @@ li.active {
     background-color: #3e8e41;
 }
 .input_class{
-	height:28px;
+	height:35px!important;
+	margin:0px 10px;
+	padding: 5px!important;
+	width: 130px;
+	font-size: 15px;
+}
+.DateInput_input{
+	padding: 0px;
+	height:35px!important;
+	/*width: 30px;*/
+}
+.label_font_size{
+	font-size: 18px;
+}
+.aps-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+.aps-table thead {
+    background: #f5f5f6;
+}
+thead {
+    display: table-header-group;
+    vertical-align: middle;
+    border-color: inherit;
+}
+.aps-widget table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    font-size: 12px;
+}
+.aps-ani-transition {
+    transition: .3s cubic-bezier(.4,0,.2,1);
+    transform: translateZ(0);
+}
+.aps-table td, .aps-table th {
+    padding: 8px;
+    border-bottom:1px solid #dedede;
+}
+.aps-table td.aps-left, .aps-table th.aps-left {
+    text-align: left;
+}
+table.order_form{
+	margin-top: 20px;
+	vertical-align:middle!important;
+	/*text-align: center;*/
+	/*border: 1px solid #ddd;*/
+	box-shadow: 2px 2px 2px lightgrey;
+	border-collapse:collapse;
+	vertical-align:middle!important;
+}
+
+.operation, .operation li {
+    display: inline-block;
+    padding: 0px;
+}
+.top-bar {
+    margin-top: 4px;
+    height: 36px;
+    line-height: 36px;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 10px;
+    position: relative;
+    padding: 25px;
 }
 .login_button{
 	margin-top: 10px;
@@ -115,6 +181,69 @@ li.active {
 .login_button:hover{
 	border-color: var(--stereo-blue-3);
 	text-decoration: underline;
+}
+
+.a-type:focus{
+	outline:none!important;
+}
+.a-type{
+	color:#007bff!important;
+	
+}
+.a-type:hover{
+	text-decoration: underline!important;
+	cursor:pointer;
+}
+.header-format{
+	margin-top:20px;
+	margin-left: 350px;
+	text-align: center;
+	height: 30px;
+	width: 400px;
+	background-color: #8ea21b;
+	padding: 3px;
+}
+.previous-next-container {
+    float: right;
+    padding: 5px 0px;
+    margin:20px;
+}
+.page-input{
+	height: 40px;
+	width: 30px;
+	margin-top: 10px;
+	margin-left: 10px;
+	border: 0px;
+	font-size: 22px;
+	text-align: center;
+}
+.page-off{
+	height: 40px;
+	width: 10px;
+	margin-top: 10px;
+	font-size: 22px;
+	padding: 3px 0px;
+}
+.total-page-num{
+	height: 40px;
+	width: 30px;
+	margin-top: 10px;
+	margin-left: 10px;
+	font-size: 22px;
+	padding: 4px 0px;
+}
+.all-button{
+	margin-top: 10px;
+	margin-left: 10px;
+	height: 40px;
+	border: 1px solid #8ea21b;
+	background-color: #8ea21b;
+}
+.all-button:hover{
+	background-color: #8ea21b;
+}
+.all-button:focus{
+	background-color: #8ea21b;
 }
 .register_button{
 	margin-top: 10px;
@@ -130,12 +259,13 @@ li.active {
 .margin-left-15{
 	margin-left: -15px;
 }
-
+.cut-off-rule{
+	padding: 3px;
+}
 .card-ss{
 	height:36px;
 	padding: 2px 2px;
 	width:174px;
-	
 }
 
 .card-sma{
