--- a/assets/common.css
+++ b/assets/common.css
@@ -16,18 +16,18 @@
 	border: 0px solid #ECECEC;
 }
 
-li.active {
+li.active, a.active {
     background-color: #fff;
 }
 .side {
-	z-index: 10;
-    width: 250px;
+	/*z-index: 1;*/
+    width: 100%;
     float: left;
     user-select: none;
     background: #eaedf1;
     padding-top: 70px;
     transition-duration: .2s;
-    height: 100%;
+    /*height: 100%;*/
 }
 .maginRight{
 	margin-right: 90px!important;
@@ -54,25 +54,43 @@ li.active {
     text-align: center;
     font-size: 16px;
 }
-.text {
+a.text, li.text {
     color: #222;
     font-size: 16px;
     height: 40px;
     line-height: 40px;
+    width: 100%;
+    display: list-item;
+    /*text-align: -webkit-match-parent;*/
+    text-align: left;
     
+}
+a.text:hover{
+	text-decoration: none;
 }
 .content {
     padding: 15px;
     overflow-y: auto;
     z-index: 0;
     transition-duration: .2s;
-    height: 100%;
+    /*height: 100%;*/
 }
 .search-word {
     display: inline-block;
-    margin: 0 0 3px 4px;
+    margin: 2px 0px 3px 4px;
 }
-
+.search-button{
+	margin-left: 10px;
+	height: 40px;
+	border: 1px solid #1b5da2;
+	background-color: #1b5da2;
+}
+.search-button:hover{
+	background-color: #1b5da2;
+}
+.search-button:focus{
+	background-color: #1b5da2;
+}
 .dropdown {
     position: relative;
     display: inline-block;
@@ -110,7 +128,14 @@ li.active {
 	height:35px!important;
 	margin:0px 10px;
 	padding: 5px!important;
-	width: 130px;
+	width: 200px;
+	font-size: 15px;
+}
+.date_input_class{
+	height:35px!important;
+	margin:0px 10px;
+	padding: 5px!important;
+	width: 300px;
 	font-size: 15px;
 }
 .DateInput_input{
@@ -200,7 +225,7 @@ table.order_form{
 	text-align: center;
 	height: 30px;
 	width: 400px;
-	background-color: #8ea21b;
+	background-color: var(--stereo-blue-9);
 	padding: 3px;
 }
 .previous-next-container {
@@ -232,18 +257,25 @@ table.order_form{
 	font-size: 22px;
 	padding: 4px 0px;
 }
+.page-size-select{
+	height: 40px;
+	width: 50px;
+	z-index: 2;
+	margin:10px 0px;
+}
+
 .all-button{
 	margin-top: 10px;
 	margin-left: 10px;
 	height: 40px;
-	border: 1px solid #8ea21b;
-	background-color: #8ea21b;
+	border: 1px solid var(--stereo-blue-9);
+	background-color: var(--stereo-blue-9);
 }
 .all-button:hover{
-	background-color: #8ea21b;
+	background-color: var(--stereo-blue-9);
 }
 .all-button:focus{
-	background-color: #8ea21b;
+	background-color: var(--stereo-blue-9);
 }
 .register_button{
 	margin-top: 10px;
