--- a/assets/common.css
+++ b/assets/common.css
@@ -191,6 +191,9 @@ table.order_form{
     display: inline-block;
     padding: 0px;
 }
+ul.operation{
+	margin:10px!important;
+}
 .top-bar {
     margin-top: 4px;
     height: 36px;
