--- a/assets/stat_page.css
+++ b/assets/stat_page.css
@@ -13,7 +13,8 @@
 }
 
 .gridtable{	
-	height: 500px;
+	width: 100%;
+	height: 100%;
 	border: 1px solid #ddd;
 	border-collapse:collapse;
 	vertical-align:middle!important;
@@ -23,15 +24,27 @@ table.gridtable th {
 	border-top: 1px;
 	height:82.3px;
 	vertical-align:middle!important;
-	font-size: 1em;
+	font-size: 0.85em;
 	font-weight: bold;
 }
 table.gridtable td {
     vertical-align:middle!important;
 	text-align: center;
-	padding: 15px;
-	font-size: 1.2em;
-	font-weight: 250;    
+	padding: 10px;
+	font-size: 1em;
+	font-weight: 200;    
+}
+
+table.gridtable thead {
+    background: #f5f5f6;
+}
+
+table.gridtable td, table.gridtable th {
+    padding: 8px;
+    border-bottom:1px solid #dedede;
+}
+.card-fig{
+	margin:15px;
 }
 .card-mid{
 	height: 500px;
@@ -45,3 +58,10 @@ table.gridtable td {
 .font-DIN{
 	font-family: DIN Next LT Pro;
 }
+.bin-img{
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
+}
+
